cabal-version:      2.4
name:               smapr
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             flex99
maintainer:         flex99@posteo.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Proto.Vector_tile
                    , Proto.Util
                    , Proto.Vector_tile.Tile
                    , Proto.Vector_tile.Tile.Feature
                    , Proto.Vector_tile.Tile.GeomType
                    , Proto.Vector_tile.Tile.Layer
                    , Proto.Vector_tile.Tile.Value
                    , Decoder.Geometry
                    , Decoder.Lines
                    , Decoder.Polygons
                    , Decoder.Points
                    , Renderer.Lines
                    , Renderer.Polygons
                    , Renderer.Geometry
                    , Decoder.FeatureAttributes
                    , Glue.Mapper
                    , Style.Poc
                    , Style.Poc2
                    , Style.Parser
                    , Style.Expressions
                    , Style.FilterExpressions
                    , Style.Layers.Line
                    , Util
                    , ApiClient

    -- Modules included in this library but not exported.
    other-modules: Decoder.Helper
    -- Auto generated modules: proto stuff
    autogen-modules:  Proto.Vector_tile
                    , Proto.Vector_tile.Tile
                    , Proto.Vector_tile.Tile.Feature
                    , Proto.Vector_tile.Tile.GeomType
                    , Proto.Vector_tile.Tile.Layer
                    , Proto.Vector_tile.Tile.Value

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.7 && <5
                    , protocol-buffers
                    , protocol-buffers-descriptor
                    , wreq
                    , lens
                    , megaparsec
                    , generic-deriving
                    , bytestring
                    , utf8-string
                    , diagrams
                    , diagrams-lib
                    , diagrams-svg
                    , time
                    , text
                    , configurator
                    , containers
                    , aeson
                    , scientific
                    , transformers
                    , colour
                    , vector

    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions: OverloadedStrings 

Test-Suite smapr-testsuite
  Type:                 exitcode-stdio-1.0
  Main-is:              STest.hs
  ghc-options:          -Wall
  hs-source-dirs:       test
  Build-depends:        base >=4.7 && <5
                      , hspec ==2.*
                      , smapr
                      , megaparsec
                      , text
                      , aeson
                      , containers
  other-modules:        Decoder.DecoderSpec
                      , Parser.ParseSpec
  build-tool-depends: hspec-discover:hspec-discover
