cabal-version:      3.4
name:               smapr
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             flex99
maintainer:         flex99@posteo.net

build-type: Custom
extra-source-files: lib/Proto/vector.proto

common warnings
    ghc-options: -Wall

custom-setup
    setup-depends: base, Cabal, proto-lens-setup
    build-tool-depends: proto-lens-protoc:proto-lens-protoc

library
    exposed-modules:  Proto.Util
                    , Proto.Vector
                    , Proto.Vector_Fields
                    , Decoder.Geometry
                    , Decoder.Lines
                    , Decoder.Polygons
                    , Decoder.Points
                    , Renderer.Lines
                    , Renderer.Polygons
                    , Renderer.Geometry
                    , Style.Poc
                    , Style.ExpressionsContext
                    , Style.Layers.Line
                    , Style.Layers.Fill
                    , Style.Layers.Background
                    , Style.Layers.Wrapper
                    , Style.Layers.Util
                    , Style.Lang.Ast
                    , Style.Lang.Types
                    , Style.Lang.Lex
                    , Style.Lang.Parser
                    , Style.Lang.Token
                    , Style.Lang.Util
                    , Style.Lang.Check
                    , Style.Lang.Eval
                    , Style.Test.Unit
                    , Util
                    , ApiClient

    -- Modules included in this library but not exported.
    other-modules:    Decoder.Helper
                    
    -- Auto generated modules: proto stuff
    autogen-modules:  Proto.Vector
                    , Proto.Vector_Fields

    build-tool-depends: proto-lens-protoc:proto-lens-protoc

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base == 4.17.*
                    , proto-lens
                    , proto-lens-runtime
                    , microlens
                    , microlens-th
                    , mtl
                    , megaparsec
                    , generic-deriving
                    , bytestring
                    , utf8-string
                    , diagrams-contrib
                    , diagrams-svg
                    , diagrams-lib
                    , svg-builder
                    , time
                    , text
                    , configurator
                    , containers
                    , aeson
                    , scientific
                    , transformers
                    , colour
                    , vector
                    , split

    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions: OverloadedStrings 

Test-Suite smapr-testsuite
  Type:                 exitcode-stdio-1.0
  Main-is:              STest.hs
  ghc-options:          -Wall
  hs-source-dirs:       test
  build-depends:        base >=4.7 && <5
                      , hspec ==2.*
                      , smapr
                      , megaparsec
                      , text
                      , aeson
                      , containers
  other-modules:        Decoder.DecoderSpec
                      , Parser.ParseSpec
  build-tool-depends: hspec-discover:hspec-discover
