cabal-version:      3.4
name:               smapr
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             flex99
maintainer:         flex99@posteo.net

build-type: Custom
extra-source-files: lib/Proto/vector.proto

common warnings
    ghc-options: -Wall

custom-setup
    setup-depends: base, Cabal, proto-lens-setup

library
    exposed-modules:  View
                    , Proto.Vector
                    , Proto.Vector_Fields
                    , Style.Test.Unit

    -- Modules included in this library but not exported.
    other-modules:    Decoder.Helper
                    , Proto.Util
                    , Decoder.Geometry
                    , Decoder.Lines
                    , Decoder.Polygons
                    , Decoder.Points
                    , Renderer.Lines
                    , Renderer.Points
                    , Renderer.Polygons
                    , Renderer.Geometry
                    , Style.ExpressionsContext
                    , Style.Layers.Line
                    , Style.Layers.Fill
                    , Style.Layers.Point
                    , Style.Layers.Background
                    , Style.Layers.Wrapper
                    , Style.Layers.Util
                    , Style.Lang.Ast
                    , Style.Lang.Types
                    , Style.Lang.Lex
                    , Style.Lang.Parser
                    , Style.Lang.Token
                    , Style.Lang.Util
                    , Style.Lang.Check
                    , Style.Lang.Eval
                    , Util
                    , ApiClient
                    
    -- Auto generated modules: proto stuff
    autogen-modules:  Proto.Vector
                    , Proto.Vector_Fields

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-tool-depends: proto-lens-protoc:proto-lens-protoc
    
    build-depends:    base >=4.7 && <5
                    , proto-lens
                    , proto-lens-runtime
                    , http-client
                    , http-client-tls
                    , http-types
                    , microlens
                    , microlens-th
                    , mtl
                    , megaparsec
                    , generic-deriving
                    , bytestring
                    , utf8-string
                    , diagrams-contrib
                    , diagrams-lib
                    , diagrams-svg
                    , time
                    , text
                    , configurator
                    , containers
                    , aeson
                    , scientific
                    , transformers
                    , colour
                    , vector
                    , split
                    , svg-builder
                    , directory

    hs-source-dirs:   lib
    default-language: Haskell2010
    default-extensions: OverloadedStrings 

Test-Suite smapr-testsuite
  Type:                 exitcode-stdio-1.0
  Main-is:              STest.hs
  ghc-options:          -Wall
  hs-source-dirs:       test
  Build-depends:        base >=4.7 && <5
                      , hspec ==2.*
                      , smapr
                      , mtl
                      , microlens
                      , megaparsec
                      , text
                      , aeson
                      , containers
                      
  other-modules:        Parser.ParseSpec
                      
  build-tool-depends: hspec-discover:hspec-discover
